--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ Thumbs.db
 
 xcuserdata/
 *.xcuserstate
+InternDisha.xcodeproj/project.xcworkspace/xcuserdata/shivamkumar.xcuserdatad/UserInterfaceState.xcuserstate
